--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^49.0.21",
     "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
