--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "letters",
-    "slug": "letters",
+    "name": "Letters",
+    "slug": "Letters",
     "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
