--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^49.0.21",
     "expo-av": "~13.4.1",
     "expo-build-properties": "~0.8.3",
+    "expo-clipboard": "~4.3.1",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
