--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "@react-native-firebase/firestore": "^18.7.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "^49.0.21",
-    "expo-av": "~13.4.1",
-    "expo-build-properties": "~0.8.3",
-    "expo-clipboard": "~4.3.1",
-    "expo-dev-client": "~2.4.12",
-    "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^52.0.7",
+    "expo-av": "~15.0.1",
+    "expo-build-properties": "~0.13.1",
+    "expo-clipboard": "~7.0.0",
+    "expo-dev-client": "~5.0.2",
+    "expo-font": "~13.0.1",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^10.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
-    "react-native-svg": "13.9.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
