Some iMac change

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Letters",
+    "name": "Letters PL",
     "slug": "letters",
     "version": "1.0.2",
     "orientation": "portrait",
